--- a/css/style.css
+++ b/css/style.css
@@ -78,6 +78,9 @@ a:hover {
     h1, h2, h4 {
         font-size: 20px;
     }
+    .project p {
+        font-size: 10px;
+    }
 }
 
 /* Content */
